# cookiecutter-python-github

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: Makefile  Pipfile  README.md
{{cookiecutter.project_name}}/.github/workflows/: pull_request.yml
{{cookiecutter.project_slug}}/: LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: pull_request.yml
{{cookiecutter.project_slug}}/tests/: test_app.py
